--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bituquark | Text Effect</title>
+    <title>Bitquark | Text Effect</title>
     <link rel="stylesheet" href="./app.css" />
   </head>
   <body>
